# corviraptor.github.io

./: .gitignore  Cargo.toml  README.md  buttons.css  crt.css  header.css  index.html  mc-chat-parser.code-workspace  mirror_push.sh  nav.css  portfolio.html  shell.nix  styles.css
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  continuous_deployment.yml  deploy-github-pages.yml  deploy-stage.yml
css/: buttons.css
markdown/: faq.md  portfolio.md
src/: components.rs  header.rs  lib.rs  main.rs  main_site.rs  markdown.rs  nav.rs  settings.rs  sidebar.rs  storage.rs  theme.rs
src/components/: button.rs  color_control.rs  default_sidebar.rs  header.rs  icons.rs  markdown.rs  mod.rs  pages.rs  sidebar.rs
src/components/color_control/: colorization.rs
src/components/icons/: mod.rs
src/main_site/: header.rs  mod.rs  nav.rs  pages.rs  route.rs  sidebar.rs
src/main_site/pages/: component_test.rs  faq.rs  home.rs  links.rs  mod.rs  not_found.rs  portfolio.rs  settings.rs
src/pages/: faq.rs  home.rs  links.rs  mod.rs  not_found.rs  portfolio.rs  settings.rs
src/theme/: color.rs  color_theme.rs  font.rs  mod.rs
styles/: buttons.css  color_control.css  header.css  main.css  nav.css  physical_buttons.css  sidebar.css  styles.css  theme.css
