[package]
name = "corviraptor-dot-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
pulldown-cmark = "0.9.6"
gloo = "0.11.0"
web-sys = { version = "0.3.67", features = ["HtmlSelectElement"]}
palette = { version = "0.7.4", features = ["serializing"] }
phf = "0.11.2"
strum = "0.26.1"
strum_macros = "0.26.1"
gloo-storage = "0.3.0"
serde = { version= "1.0.217", features = ["derive"] }
